fix cursor on firefox

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -59,15 +59,14 @@ body {
 .cursor {
   width: 15px;
   height: 15px;
-  background: rgba(0,0,0,0);
+  background: white;
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   transform-origin: center center;
   pointer-events: none;
-  // mix-blend-mode: difference;
+  mix-blend-mode: difference;
   z-index: 10000;
-  backdrop-filter: invert(1);
   display: flex;
   align-items: center;
   justify-content: center;
